<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/raportActivitateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raport_activitate"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="32dp"
        android:layout_marginTop="48dp"
        android:textColor="#26C4EC"/>

    <TextView
        android:id="@+id/ultimulTestTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimult_test"
        android:layout_below="@+id/raportActivitateTxt"
        android:layout_marginTop="32dp"
        android:textSize="24dp"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:id="@+id/ultimulTest1LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ultimulTestTxt"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:background="@drawable/background_gri"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ultimulTest2LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ultimulTest1LL"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:background="@drawable/background_gri"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ultimulTest3LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ultimulTest2LL"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:background="@drawable/background_gri"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:background="@drawable/background_gri"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raport_general"
        android:id="@+id/raportGeneralTxt"
        android:layout_below="@id/ultimulTest3LL"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="24dp"/>


</RelativeLayout>