<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/TXTIntrebare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/feedback_test"
        android:textColor="#26C4EC"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="140dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:orientation="horizontal"
            android:text="@string/RGFeedback">

            <RadioButton
                android:id="@+id/RBFeedback1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:button="@android:drawable/btn_star"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/RBFeedback2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:button="@android:drawable/btn_star"
                android:checked="false"
                android:clickable="false"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/RBFeedback3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:button="@android:drawable/btn_star"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/RBFeedback4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:button="@android:drawable/btn_star"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:drawable/btn_star"
                android:checked="false"
                android:text="@string/_5" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/raspunsuriTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/transmitere_opinie"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="16dp"
        android:hint="@string/ETFeedback" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_albastru"
        android:text="@string/BTN_Salveaza" />

</RelativeLayout>