<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Materii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/materii"
        android:textColor="#26C4EC"
        android:textSize="32dp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Materii"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="check_button"
            android:text="@string/programare_orientat_obiect"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="check_button"
            android:text="@string/structuri_de_date"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:onClick="check_button"
            android:text="@string/java"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radio_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="check_button"
            android:text="@string/android"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radio_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="check_button"
            android:text="@string/net"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_view_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Materii"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:text="@string/selec_ia_ta"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <Button
        android:id="@+id/aplica"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_albastru"
        android:text="@string/afi_eaz_raport" />


</RelativeLayout>