<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/testeleMeleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/testele_mele"
                android:textColor="#26C4EC"
                android:textSize="32dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchSv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/testeleMeleTxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"></SearchView>

                <EditText
                    android:id="@+id/cautaEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cauta" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ordonareNumeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_arrow_downward"
                    android:text="@string/nume"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/ordonareDataTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_arrow_upward"
                    android:text="@string/data"
                    android:textSize="24dp" />
            </LinearLayout>

            <Button
                android:id="@+id/test1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchSv"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_poo_a" />

            <Button
                android:id="@+id/test2Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test1Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_poo_b" />


            <Button
                android:id="@+id/test3Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test2Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_poo_c" />

            <Button
                android:id="@+id/test4Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test3Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_sdd_a" />

            <Button
                android:id="@+id/test5Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test4Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_sdd_b" />

            <Button
                android:id="@+id/test6Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test5Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_sdd_c" />

            <Button
                android:id="@+id/test7Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test6Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_dam_a" />

            <Button
                android:id="@+id/test8Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test7Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_dam_b" />

            <Button
                android:id="@+id/test9Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test8Btn"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_gri"
                android:gravity="center"
                android:text="@string/test_dam_c" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>