<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/testNouTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/creaza_test_nou"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#26C4EC"/>

    <EditText
        android:id="@+id/numeTxt"
        android:layout_width="200dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testNouTxt"
        android:layout_centerHorizontal="true"
        android:hint="@string/nume" />

    <EditText
        android:id="@+id/intrebareNouaTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numeTxt"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_question"
        android:hint="@string/intrebare_noua" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intrebareNouaTxt"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/grilaBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/raspuns_multiplu"
            android:background="@drawable/background_gri"/>

        <Button
            android:id="@+id/adevaratFalsBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_gri"
            android:text="@string/adevarat_fals" />

        <Button
            android:id="@+id/raspunsBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/raspuns_scurt"
            android:background="@drawable/background_gri"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/adaugaIntrebareFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16sp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="#26C4EC"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/salveaza_test"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_albastru"/>


</RelativeLayout>