<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intrebareNouaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/adauga_intrebare_noua"
        android:textColor="#26C4EC"
        android:textSize="32dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/intrebareNouaED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intrebareNouaTxt"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_question"
        android:gravity="center"
        android:hint="@string/intrebare_noua" />

    <TextView
        android:id="@+id/alegeRaspunsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intrebareNouaED"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/alege_raspunsul" />

    <TextView
        android:id="@+id/corectTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intrebareNouaED"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:text="@string/corect" />

    <LinearLayout
        android:id="@+id/variantaALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alegeRaspunsTxt"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gri"
            android:text="@string/a" />

        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/variantBLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/variantaALL"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gri"
            android:text="@string/b" />

        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/variantCLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/variantBLL"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gri"
            android:text="@string/c" />

        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/variantDLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/variantCLL"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gri"
            android:text="@string/d" />

        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_albastru"
        android:text="@string/urmatoarea_intrebare" />

</RelativeLayout>