<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intrebareNouaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_intrebare_noua"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="32dp"
        android:layout_marginTop="48dp"
        android:textColor="#26C4EC"/>

    <EditText
        android:id="@+id/intrebareNouaED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_question"
        android:hint="@string/intrebare_noua"
        android:gravity="center"
        android:layout_below="@+id/intrebareNouaTxt"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/raspunsED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/raspuns"
        android:layout_below="@+id/intrebareNouaED"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_check"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/urmatoarea_intrebare"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_albastru"/>

</RelativeLayout>